Fixed to a working modal, still a few bugs

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
+        <!-- <button class="modal-close">Close</button> -->
+        <!-- <h1>ivysaur</h1>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"> -->
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -74,7 +77,9 @@
     <button id="show-modal">Show modal</button>
     <div id="modal-container">
     </div>
-  <script src="jquery-3.6.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
