--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <title>Pokédex</title>
 </head>
-<nav class="navbar fixed-top navbar-expand-sm navbar-light bg-light">
-  <a class="navbar-brand" href="#">My Personal PokeDex</a>
+<nav class="navbar fixed-top navbar-expand-sm navbar-light">
+  <a class="navbar-brand" href="#">My Personal PokeDex  <span class="sr-only">(current)</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <img
@@ -20,13 +20,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">PokeDex <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="https://pokedex.org/">PokeDex.org</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Favorites</a>
+        <a class="nav-link" href="https://pokedex.org/#/pokemon/122">My Favorite</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Least Favorites</a>
+        <a class="nav-link" href="https://pokedex.org/#/pokemon/476">My Least Favorite</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"><span
@@ -38,19 +38,11 @@
 
 <body>
   <ul class="pokemon-list list-group"></ul>
-  <!-- Button trigger modal
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-    Launch demo modal
-  </button> -->
-
-  <!-- Modal -->
+<!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <!-- <button class="modal-close">Close</button> -->
-        <!-- <h1>ivysaur</h1>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/2.png"> -->
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -58,23 +50,14 @@
           </button>
         </div>
         <div class="modal-body">
-          <!-- <img class="img-fluid pokemon-image" width="150" height="150" alt="image of pokemon">
-          <p class="pokemon-height"></p> -->
         </div>
         <div class="modal-footer">
-          <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button> -->
         </div>
       </div>
     </div>
   </div>
-  <div class="list-group">
-    <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
-    <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
-    <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
-  </div>
   <ul class="pokemon-list"></ul>
-    <button id="show-modal">Show modal</button>
+    <button id="show-modal" class="invisible"></button>
     <div id="modal-container">
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" 
